# ironduck

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  package-lock.json
.github/workflows/: ci.yml
crates/ironduck/: Cargo.toml
crates/ironduck-binder/: Cargo.toml
crates/ironduck-binder/src/: bound_expression.rs  bound_statement.rs  expression_binder.rs  lib.rs  statement_binder.rs
crates/ironduck-catalog/: Cargo.toml
crates/ironduck-catalog/src/: column.rs  function.rs  index.rs  lib.rs  schema.rs  sequence.rs  table.rs  view.rs
crates/ironduck-cli/: Cargo.toml
crates/ironduck-cli/src/: main.rs
crates/ironduck-common/: Cargo.toml
crates/ironduck-common/src/: error.rs  lib.rs  types.rs  value.rs
crates/ironduck-execution/: Cargo.toml
crates/ironduck-execution/src/: chunk.rs  executor.rs  expression.rs  lib.rs  operator.rs  pipeline.rs  vector.rs  vectorized_expr.rs
crates/ironduck-functions/: Cargo.toml
crates/ironduck-functions/src/: aggregate.rs  lib.rs  scalar.rs
crates/ironduck-optimizer/: Cargo.toml
crates/ironduck-optimizer/src/: lib.rs
crates/ironduck-optimizer/src/rules/: constant_folding.rs  filter_pushdown.rs  limit_pushdown.rs  mod.rs  predicate_simplification.rs  projection_pushdown.rs
crates/ironduck-parser/: Cargo.toml
crates/ironduck-parser/src/: ast.rs  lib.rs
crates/ironduck-planner/: Cargo.toml
crates/ironduck-planner/src/: lib.rs  logical_operator.rs  plan_builder.rs
crates/ironduck-storage/: Cargo.toml
crates/ironduck-storage/src/: buffer_pool.rs  index_storage.rs  lib.rs  page.rs  persistence.rs  table_storage.rs
crates/ironduck-transaction/: Cargo.toml
crates/ironduck-transaction/src/: lib.rs  mvcc.rs
crates/ironduck/src/: lib.rs
tests/sqllogictest/: Cargo.toml
tests/sqllogictest/duckdb_tests/: test_aggregate_types.test  test_array_indexing.test  test_array_literals.test  test_bitwise.test  test_correlated_subquery.test  test_cte.test  test_grouping_sets.test  test_joins.test  test_lateral.test  test_math_functions.test  test_optimizer.test  test_outer_joins.test  test_percentiles.test  test_pivot.test  test_set_operations.test  test_string_functions.test  test_string_split.test  test_struct.test  test_window_functions.test
tests/sqllogictest/duckdb_tests_old/: test_aggregate_functions.test  test_avg.test  test_constraints.test  test_date_arithmetic.test  test_date_functions.test  test_date_trunc.test  test_expressions.test  test_new_aggregates.test  test_optimizer.test  test_qualify.test  test_recursive_cte.test  test_subqueries.test  test_try_cast.test
tests/sqllogictest/src/: lib.rs
