[workspace]
resolver = "2"
members = [
    "crates/ironduck",
    "crates/ironduck-common",
    "crates/ironduck-parser",
    "crates/ironduck-binder",
    "crates/ironduck-catalog",
    "crates/ironduck-planner",
    "crates/ironduck-optimizer",
    "crates/ironduck-execution",
    "crates/ironduck-storage",
    "crates/ironduck-transaction",
    "crates/ironduck-functions",
    "crates/ironduck-cli",
    "tests/sqllogictest",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["IronDuck Contributors"]
license = "MIT"
repository = "https://github.com/ironduck/ironduck"
rust-version = "1.75"

[workspace.dependencies]
# Internal crates
ironduck = { path = "crates/ironduck" }
ironduck-common = { path = "crates/ironduck-common" }
ironduck-parser = { path = "crates/ironduck-parser" }
ironduck-binder = { path = "crates/ironduck-binder" }
ironduck-catalog = { path = "crates/ironduck-catalog" }
ironduck-planner = { path = "crates/ironduck-planner" }
ironduck-optimizer = { path = "crates/ironduck-optimizer" }
ironduck-execution = { path = "crates/ironduck-execution" }
ironduck-storage = { path = "crates/ironduck-storage" }
ironduck-transaction = { path = "crates/ironduck-transaction" }
ironduck-functions = { path = "crates/ironduck-functions" }

# Parsing
sqlparser = "0.53"

# Arrow/Columnar
arrow = { version = "53" }
arrow-array = "53"
arrow-buffer = "53"
arrow-schema = "53"

# Memory Management
bumpalo = { version = "3", features = ["collections"] }
typed-arena = "2"

# Async/Concurrency
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
crossbeam = "0.8"
crossbeam-channel = "0.5"

# Data Structures
hashbrown = "0.15"
roaring = "0.10"
smallvec = "1"
indexmap = "2"

# Compression
lz4_flex = "0.11"
zstd = "0.13"

# Utilities
regex = "1"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1"
memmap2 = "0.9"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1"
num-traits = "0.2"
serde_json = "1"

# Testing
sqllogictest = "0.23"
criterion = "0.5"
proptest = "1"
insta = "1"

[profile.release]
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
