[package]
name = "ironduck-binder"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ironduck-common.workspace = true
ironduck-parser.workspace = true
ironduck-catalog.workspace = true
sqlparser.workspace = true
thiserror.workspace = true
chrono.workspace = true
