[package]
name = "ironduck-common"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
uuid.workspace = true
bytes.workspace = true
smallvec.workspace = true
num-traits.workspace = true
arrow-schema.workspace = true
serde.workspace = true
