[package]
name = "ironduck-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ironduck-common.workspace = true
parking_lot.workspace = true
memmap2.workspace = true
lz4_flex.workspace = true
zstd.workspace = true
bytes.workspace = true
thiserror.workspace = true
