[package]
name = "ironduck-sqllogictest"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ironduck.workspace = true
sqllogictest.workspace = true
tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true

[dev-dependencies]
criterion.workspace = true
